[ADD] Added nested modules service and controller
