# chapter_viii/overlord.js/src/module/controllers/index.js
@@ -1,4 +1,5 @@
 const { getById } = require('./get-module-by-id')
-const { create } = require('./create-role')
+const { getNestedModules } = require('./get-nested-modules')
+const { create } = require('./create-module')
 
-module.exports = { getById, create }
+module.exports = { getById, getNestedModules, create }
