# chapter_viii/overlord.js/src/module/routes.js
@@ -2,11 +2,13 @@ const express = require('express')
 const router = express.Router()
 const { param } = require('express-validator')
 
-const { getById } = require('./controllers/index')
+const { getById, getNestedModules } = require('./controllers/index')
 
 router.get('/overlord/v1/module/:id',
   param('id').toInt().notEmpty()
     .withMessage('Should have a numeric identifier'),
   getById)
+
+router.get('/overlord/v1/module/nested/modules', getNestedModules)
 
 module.exports = router
