# chapter_viii/overlord.js/swagger.json
@@ -335,6 +335,26 @@
         }
       }
     },
+    "/overlord/v1/module/nested/modules": {
+      "get": {
+        "tags": [
+          "Module"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      }
+    },
     "/overlord/v1/version": {
       "get": {
         "tags": [
